--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,22 @@
             <scope>provided</scope>
         </dependency>
 
+        <!-- JAXBind Api       -->
+        <dependency>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
+            <version>2.3.1</version>
+        </dependency>
+
+        <!-- Glassfish JAXBind  implementation-->
+        <dependency>
+            <groupId>org.glassfish.jaxb</groupId>
+            <artifactId>jaxb-runtime</artifactId>
+            <version>2.3.3</version>
+        </dependency>
+
+
+
         <!--  JAX-RS API -->
         <dependency>
             <groupId>javax.ws.rs</groupId>
@@ -35,7 +51,15 @@
             <version>2.35</version>
         </dependency>
 
-<!--        HK2 (Jersey Injection Support)-->
+        <!-- Jersey XML support     -->
+        <dependency>
+            <groupId>org.glassfish.jersey.media</groupId>
+            <artifactId>jersey-media-jaxb</artifactId>
+            <version>2.35</version>
+        </dependency>
+
+
+        <!--        HK2 (Jersey Injection Support)-->
         <dependency>
             <groupId>org.glassfish.jersey.inject</groupId>
             <artifactId>jersey-hk2</artifactId>
