--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -11,7 +11,7 @@
         <servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
         <init-param>
             <param-name>jersey.config.server.provider.packages</param-name>
-            <param-value>org.example.resources</param-value>
+            <param-value>org.example.resources, org.example.model</param-value>
         </init-param>
         <load-on-startup>1</load-on-startup>
     </servlet>
